--- a/templates/auth/password_update_form.html
+++ b/templates/auth/password_update_form.html
@@ -35,7 +35,8 @@
   <div id="layout-middle" class="col-md-9 col-sm-9">
       <h1 class="page-title">Change password</h1>
       <div class="col-md-8 col-sm-8">
-          <form action="{% url "password-change" %}" method="post" id="forgot-form" class="form-horizontal form-without-legend">
+          <form action="{% url "password-change" %}" method="post" id="update-form" class="form-horizontal form-without-legend">
+			<fieldset>
               {% csrf_token %}
               <div class="form-group {% if form.old_password.errors %}has-error{% endif %}">
                   {% if form.non_field_errors %}<span class="validation-message">{{form.non_fields_errors|striptags}}</span>{% endif %}
@@ -59,14 +60,13 @@
                       {% if form.new_password2.errors %}<span class="validation-message">{{form.new_password2.errors|striptags}}</span>{% endif %}
                   </div>
               </div>
-              <div class="form-group">
+              <div class="form-group submit-group">
                   <label class="col-sm-5 control-label">&nbsp;</label>
                   <div class="col-sm-5">
-                      <button type="submit" class="btn btn-primary">
-                          Send
-                      </button>
+                      <button type="submit" class="btn btn-primary">Send</button>
                   </div>
               </div>
+			</fieldset>
           </form>
       </div>
   </div>
