--- a/templates/html/header.html
+++ b/templates/html/header.html
@@ -4,7 +4,7 @@
 		  <!-- BEGIN TOP BAR LEFT PART -->
 		  <div class="col-md-6 col-sm-6 additional-info">
 			  <ul>
-				  <li><i class="fa fa-phone"></i><span>+1 888 243 7406</span></li>
+				  <li><i class="fa fa-phone"></i><span>+1 888 243 7406</span> <span>(Toll Free)</span></li>
 				  <li><i class="fa fa-envelope-o"></i><span>info@essaycoffee.com</span></li>
 			  </ul>
 		  </div>
