--- a/templates/orders/my-orders.html
+++ b/templates/orders/my-orders.html
@@ -60,7 +60,7 @@
        <tr>
         <td>{{draft.pk}}</td>
         <td><a href="{% url 'order-id' draft.pk %}">{{draft.paper_title}}</a></td>
-        <td>{{draft.assignee.username}}</td>
+        <td>{% if draft.assignee.username %}{{draft.assignee.username}}{% else %}-{% endif %} </td>
         <td>{{draft.created}}</td>
         <td class="momdl">{{draft.admin_deadline}}</td>
         <td>{{draft.revision}}</td>
@@ -78,7 +78,7 @@
         </td>
        </tr>
        {% empty %}
-       <tr><td colspan=8>No orders yet.</td></tr>
+       <tr><td colspan="8">No orders yet.</td></tr>
        {% endfor %}
       </tbody>
      </table>
@@ -118,7 +118,7 @@
         </td>
        </tr>
        {% empty %}
-       <tr><td colspan=8>No orders yet.</td></tr>
+       <tr><td colspan="8">No orders yet.</td></tr>
        {% endfor %}
       </tbody>
      </table>
@@ -158,7 +158,7 @@
         </td>
        </tr>
        {% empty %}
-       <tr><td colspan=8>No orders yet.</td></tr>
+       <tr><td colspan="8">No orders yet.</td></tr>
        {% endfor %}
       </tbody>
      </table>
