--- a/templates/html/sidebar-left.html
+++ b/templates/html/sidebar-left.html
@@ -1,4 +1,11 @@
 <section class="sibebar-section">
+	<div class="sibebar-banner" style="background: #F0EDED; padding:5px; color:#525050">
+		<div style="padding-top:3px; padding-right:3px; background: rgba(255,255,255,0.6); font-size:14px; text-align:right; color:#525050">(Toll Free)</div>
+		<div class="banner-title" style="position: relative; font-size:25px; color:#525050">+1 888 243 7406</div>
+	</div>
+</section>
+
+<section class="sibebar-section">
 	<h3>Best Prices!</h3>
 	<ul class="price-list">
 		<li>
@@ -33,7 +40,7 @@
 	<div class="sibebar-banner">
 		<img src="{{ STATIC_URL }}images/demo/banner.jpg" alt="">
 		<div class="banner-title">Buy Custom Essay</div>
-		<a href="{% url 'new-order' %}" class="btn btn-primary">Order Now</a>
+		<a href="{% url 'new-order' %}" class="btn btn-primary" style="font-size:23px;">Order Now</a>
 	</div>
 </section>
 
@@ -51,31 +58,33 @@
 	<!-- BEGIN SOCIAL SHARE BUTTONS -->
 	<div class="social-share">
 		<!-- Google Plus Button -->
-		<div class="g-plusone" data-size="medium" data-href="http://54.191.44.155"></div>
+		<div class="g-plusone" data-size="medium" data-href="{{ co.ADMIN_DOMAIN }}"></div>
 		<script type="text/javascript">
-		  (function() {
+		(function() {
 			var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
 			po.src = 'https://apis.google.com/js/platform.js';
 			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-		  })();
+		})();
 		</script>
 		<!-- end Google Plus Button -->
 
 		<!-- Twitter Button -->
-		<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://genttech.com/my">Tweet</a>
+		<a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ co.ADMIN_DOMAIN }}">Tweet</a>
 		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 		<!-- end Twitter Button -->
 
 		<!-- Facebook Button -->
 		<div id="fb-root"></div>
-		<script>(function(d, s, id) {
-		  var js, fjs = d.getElementsByTagName(s)[0];
-		  if (d.getElementById(id)) return;
-		  js = d.createElement(s); js.id = id;
-		  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=387897624670260&version=v2.0";
-		  fjs.parentNode.insertBefore(js, fjs);
-		}(document, 'script', 'facebook-jssdk'));</script>
-		<div class="fb-like" data-href="http://54.191.44.155" data-width="100" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
+		<script>
+		(function(d, s, id) {
+			var js, fjs = d.getElementsByTagName(s)[0];
+			if (d.getElementById(id)) return;
+			js = d.createElement(s); js.id = id;
+			js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=387897624670260&version=v2.0";
+			fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));
+		</script>
+		<div class="fb-like" data-href="{{ co.ADMIN_DOMAIN }}" data-width="100" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
 		<!-- end Facebook Button -->
 	</div>
 	<!-- END SOCIAL SHARE BUTTONS -->
