--- a/templates/orders/order_id_edit.html
+++ b/templates/orders/order_id_edit.html
@@ -194,12 +194,12 @@
        {% if form.urgency.errors %}<span class="validation-message">{{form.urgency.errors|striptags}}</span>{% endif %}
       </div>
      </div>
-     </br>
-     <div class="row text-left order-actions">
-       <a href="#" class="btn btn-default" data-toggle="modal" data-target="#modalDelete">Delete</a> 
-       <a href="#" class="btn btn-default">Back</a>
+	 
+     <div class="row text-center order-actions">
+       <a href="{% url 'order-id-delete' order.pk %}" class="btn btn-default" data-toggle="modal" data-target="#modalDelete">Delete</a> 
        <button type="submit" class="btn btn-primary">Save changes</button>
      </div>
+	 
    </form>
 
    <!-- begin Delete modal-->
