--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -33,25 +33,23 @@
   <form action="{% url "login" %}" method="post" class="form-horizontal form-without-legend auth-form">
    {% csrf_token %}
    <div class="form-group {% if form.errors %}has-error{% endif %}">
-    <label class="col-sm-4 control-label">Login <span class="require">*</span></label>
+    <label class="col-sm-4 control-label">Email <span class="require">*</span></label>
     <div class="col-sm-8">
-     <input type="text" name="username" value="{{form.username.value|default:''}}" class="form-control" required>
+     <input type="text" name="email" value="{{form.username.value|default:''}}" class="form-control" required>
     </div>
    </div>
    <div class="form-group {% if form.errors %}has-error{% endif %}">
     <label class="col-sm-4 control-label">Password <span class="require">*</span></label>
     <div class="col-sm-8">
      <input type="password" name="password" class="form-control" required>
-     {% if form.non_field_errors %}
-        {% for error in form.non_field_errors %}
-          <span class="validation-message">{{error|striptags}}</span>
-        {% endfor %}
+     {% if auth_error %}
+        <span class="validation-message">{{auth_error}}</span>
      {% endif %}
     </div>
    </div>
    <div class="row">
     <div class="col-sm-8 col-md-offset-4 forgot-link">
-     <a href="{% url 'password-change' %}" rel="nofollow">Forget Password?</a>
+     <a href="{% url 'forgot' %}" rel="nofollow">Forget Password?</a>
     </div>
    </div>
    
