--- a/templates/auth/password_update_form.html
+++ b/templates/auth/password_update_form.html
@@ -54,7 +54,7 @@
                   </div>
               </div>
               <div class="form-group {% if form.new_password2.errors %}has-error{% endif %}">
-                  <label class="col-sm-5 control-label">New password again</label>
+                  <label class="col-sm-5 control-label">Confirm new password</label>
                   <div class="col-sm-5">
                       <input type="password" name="new_password2" class="form-control" required>
                       {% if form.new_password2.errors %}<span class="validation-message">{{form.new_password2.errors|striptags}}</span>{% endif %}
